@@ -1,0 +1,11 @@
+prefix=@PREFIX@
+exec_prefix=@EXEC_PREFIX@
+libdir=@LIBDIR@
+includedir=@INCLUDEDIR@
+
+Name: libdali
+Description: The C library for the DataLink protocol
+URL: https://github.com/iris-edu/libdali
+Version: @VERSION@
+Cflags: -I${includedir}
+Libs: -L${libdir} -ldali
